# gitty

./: .gitignore  Cargo.toml  README.md
src/: getters.rs  lib.rs  main.rs  modes.rs  types.rs  utils.rs
